--- a/public/styles/tailwind/tailwind.css
+++ b/public/styles/tailwind/tailwind.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Jost:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:wght@400;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+
 @font-face {
   font-family: 'Montserrat';
   src: url('/public/fonts/Montserrat/Montserrat-VariableFont_wght') format('truetype');
@@ -11,5 +13,5 @@
 
 
 body {
-  @apply m-0 p-0 max-w-screen-xl mx-auto bg-[#eceef2]
+  @apply m-0 p-0 max-w-screen-xl mx-auto bg-[#eceef2] font-jetBrains
 }
